Really fixed remoteVideo overflow.
Ref T329

--- a/src/assets/styles/blink/_video.scss
+++ b/src/assets/styles/blink/_video.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100% !important;
     height: 100% !important;
-    overflow: none;
+    overflow: hidden;
 
     video {
         object-fit: cover;
